Bug 395424 - File name encoding wrong when %-character is present
Summary: File name encoding wrong when %-character is present
Status: RESOLVED FIXED
Alias: None
Product: Falkon
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: David Rosca
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2018-06-15 12:46 UTC by kde
Modified: 2018-07-08 19:09 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 3.0.2
Sentry Crash Report:


Attachments
top: name as interpreted by Falkon | below: actual name (13.27 KB, image/png)
2018-06-15 12:48 UTC, kde
Details

Note You need to log in before you can comment on or make changes to this bug.
Description kde 2018-06-15 12:46:07 UTC
https://bugs.kde.org/show_bug.cgi?id=392445
openSUSE Tumbleweed 20180606
Plasma 5.12.5
Frameworks 5.46.0
Qt 5.11.0

When trying to save a file that has percentage signs in its name, Falkon will wrongly assume them to be part of percentage encoding which leads to corrupted names.

Example file:
https://yadi.sk/i/KEx7vR7y3UFETC

I tested it in Firefox with KDE Frameworks Open/Save dialogs and it works there.
Comment 1 kde 2018-06-15 12:48:25 UTC
Created attachment 113340 [details]
top: name as interpreted by Falkon | below: actual name
Comment 2 Xavier Brochard 2018-06-30 12:18:03 UTC
I can confirm. Konqueror works well with this.

Tested on :
Debian Sid
Falkon 3.0.0, official debian package 3.0.0-3
QtWebEngine 5.10.1
Comment 3 David Rosca 2018-07-08 19:09:33 UTC
Git commit 95e2232d39c0d682b9d9db3f3e509c543646c6c8 by David Rosca.
Committed on 08/07/2018 at 18:43.
Pushed by drosca into branch 'master'.

DownloadManager: Don't try to percent decode filenames

QtWebEngine no longer percent encode it, so actually trying
to decode it produces invalid results.
FIXED-IN: 3.0.2

M  +1    -4    src/lib/downloads/downloadmanager.cpp

https://commits.kde.org/falkon/95e2232d39c0d682b9d9db3f3e509c543646c6c8