DownloadManager: Don't try to percent decode filenames

QtWebEngine no longer percent encode it, so actually trying
to decode it produces invalid results.

BUG: 395424
FIXED-IN: 3.0.2